image align fix

--- a/src/menu/menu.scss
+++ b/src/menu/menu.scss
@@ -58,19 +58,22 @@
   height: 100%;
   aspect-ratio: 1;
   position: relative;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .img-menu {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  height: 90%;
-  width: 90%;
+  height: 95%;
+  width: 95%;
   background-size: cover;
   background-position: 50% 3000%;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .menu-txtcontainer {
